# cpp-init

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt
